--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,16 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Wessel Strengholt",
-            "email": "wessel.strengholt@gmail.com"
+            "name": "Vladyslav Shut",
+            "email": "vladyslav.shut@gmail.com"
         }
     ],
     "require": {
-        "php": ">=5.4",
+        "php": ">=7.2",
         "symfony/framework-bundle": ">=2.7",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "freshheads/postcode-api-client": "^3.1",
+        "php-http/guzzle6-adapter": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
@@ -22,7 +24,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Usoft\\PostcodeBundle\\": ""
+            "PostcodeBundle\\": ""
         }
     }
 }
