--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -14,5 +14,5 @@ services:
 
     postcode.service:
       public: true
-      class: App\PostcodeBundle\Services\AddressClient
+      class: PostcodeBundle\Services\AddressClient
       arguments: ["@postcode.api_client"]
