--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/framework-bundle": ">=2.7",
         "guzzlehttp/guzzle": "^6.2",
         "freshheads/postcode-api-client": "^3.1",
-        "php-http/guzzle6-adapter": "^1.1"
+        "php-http/guzzle6-adapter": "^1.1",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
